@@ -17,9 +17,17 @@
  *  under the License.
  */
 
+
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+import org.grails.forge.internal.tasks.GenerateManpageAsciidoc
+import org.grails.forge.internal.tasks.PicocliBuildCompletionTask
+
 plugins {
-    id 'org.grails.forge.internal.build.cli-module'
-    id 'org.graalvm.buildtools.native' version '0.10.6'
+    id 'groovy'
+    id 'java-library'
+    id 'application'
+    id 'com.gradleup.shadow'
+    id 'org.grails.forge.rocker'
 }
 
 version = projectVersion
@@ -40,11 +48,25 @@ configurations.configureEach {
     }
 }
 
+def processManPages = tasks.register('processManPages', Sync)
 configurations {
     generateConfig
+
+    asciidocPages {
+        canBeConsumed = true
+        canBeResolved = false
+        outgoing.artifact(processManPages.map {
+            it.project.layout.buildDirectory.dir('processed-manpages').get().asFile
+        })
+    }
 }
 
 dependencies {
+    annotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
+    implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
+    annotationProcessor 'io.micronaut:micronaut-inject-java'
+    testAnnotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
+    testAnnotationProcessor 'io.micronaut:micronaut-inject-java'
 
     generateConfig "info.picocli:picocli-codegen:$picocliVersion"
 
@@ -61,35 +83,23 @@ dependencies {
     implementation "org.yaml:snakeyaml:$snakeyamlVersion"
 
     compileOnly 'com.google.code.findbugs:jsr305'
-    compileOnly 'org.graalvm.nativeimage:svm'
 
     testImplementation 'io.micronaut.picocli:micronaut-picocli'
     testImplementation "org.reflections:reflections:$reflectionsVersion"
     testImplementation 'org.testcontainers:spock'
-}
-
-graalvmNative {
-    toolchainDetection = false
-
-    binaries {
-        main {
-            // Main options
-            sharedLibrary = false
-            imageName = 'grails-forge-cli'
-            buildArgs(
-                    '--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.configure=ALL-UNNAMED',
-                    '--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED',
-                    '--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jni=ALL-UNNAMED',
-                    '--add-exports=org.graalvm.sdk/org.graalvm.nativeimage.impl=ALL-UNNAMED',
-                    '-H:+ReportExceptionStackTraces'
-            )
-            if (project.hasProperty('musl')) {
-                logger.lifecycle('Using musl libc')
-                buildArgs('--libc=musl', '--static')
-            }
-            mainClass = 'org.grails.forge.cli.Application'
-        }
+    if (project.hasProperty('micronautVersion')) {
+        testCompileOnly "io.micronaut:micronaut-inject-groovy:$micronautVersion"
     }
+
+    testImplementation "org.codehaus.groovy:groovy:$groovyVersion"
+    testImplementation "org.spockframework:spock-core:$spockVersion", {
+        exclude group: 'org.codehaus.groovy', module: 'groovy-all'
+    }
+
+    testImplementation "cglib:cglib-nodep:$cglibVersion"
+    testImplementation "org.objenesis:objenesis:$objenesisVersion"
+    testRuntimeOnly "ch.qos.logback:logback-classic:$logbackClassicVersion"
+    testImplementation "org.codehaus.groovy:groovy-test:$groovyVersion"
 }
 
 application {
@@ -107,4 +117,104 @@ startScripts {
 apply {
     from rootProject.layout.projectDirectory.file('gradle/java-config.gradle')
     from rootProject.layout.projectDirectory.file('gradle/publish-config.gradle')
+    from rootProject.layout.projectDirectory.file('gradle/test-config.gradle')
+    from rootProject.layout.projectDirectory.file('gradle/style-enforcement-config.gradle')
+    from rootProject.layout.projectDirectory.file('gradle/doc-config.gradle')
+}
+
+def generateManpageAsciiDoc = tasks.register('generateManpageAsciiDoc', GenerateManpageAsciidoc) {
+    mainClass = application.mainClass
+    classpath.from(configurations.generateConfig, sourceSets.main.runtimeClasspath)
+    outputDirectory = layout.buildDirectory.dir('generated-picocli-docs')
+}
+
+processManPages.configure { Sync it ->
+    it.group = 'documentation'
+    it.from generateManpageAsciiDoc
+    it.include '**/*.adoc'
+    it.into layout.buildDirectory.dir('processed-manpages')
+    it.filter { String line ->
+        if (line == ':doctype: manpage' || line.startsWith('= ')) {
+            return ''
+        } else if (line.startsWith('==')) {
+            return '=' + line
+        } else {
+            return line
+        }
+    }
+}
+
+def buildCompletion = tasks.register('buildCompletion', PicocliBuildCompletionTask)
+buildCompletion.configure { PicocliBuildCompletionTask it ->
+    it.outputDirectory.set(layout.buildDirectory.dir('bin'))
+    it.classpath.from(sourceSets.main.runtimeClasspath)
+    it.mainClass.set(application.mainClass)
+}
+
+distributions {
+    main {
+        contents {
+            from(buildCompletion) {
+                into 'bin'
+            }
+            from(rootProject.layout.projectDirectory.file('LICENSE')) {
+                into ''
+            }
+        }
+    }
+}
+
+tasks.named('shadowJar', ShadowJar) {
+    mergeServiceFiles()
+}
+
+tasks.named('shadowDistZip') {
+    enabled = false
+}
+tasks.named('shadowDistTar') {
+    enabled = false
+}
+
+tasks.register('copyShadowJar', Sync) {
+    from shadowJar.outputs
+    into project.rootProject.layout.buildDirectory.dir('libs')
+    rename { String fileName -> 'cli.jar' }
+}
+
+tasks.register('exploded', Sync) {
+    dependsOn('distZip')
+    from(zipTree(distZip.outputs.files.singleFile))
+    into(project.layout.buildDirectory.dir('exploded'))
+    eachFile { FileCopyDetails fcd ->
+        fcd.relativePath = new RelativePath(true, fcd.relativePath.segments.drop(1))
+    }
+    onlyIf {
+        distZip.outputs.files.singleFile.exists()
+    }
+}
+
+tasks.register('cleanup', Delete) {
+    delete(project.rootProject.layout.buildDirectory.file('libs/cli.jar'))
+    delete(project.layout.buildDirectory.dir('dist'))
+}
+
+tasks.named('clean') {
+    dependsOn 'cleanup'
+}
+
+tasks.named('assemble') {
+    dependsOn('exploded')
+}
+
+configurations.configureEach {
+    resolutionStrategy {
+        eachDependency { DependencyResolveDetails details ->
+            if (details.requested.group == 'org.codehaus.groovy') {
+                details.useVersion(groovyVersion)
+            }
+            if (details.requested.name == 'spock-core') {
+                details.useVersion(spockVersion)
+            }
+        }
+    }
 }
